Made changes to the reviews section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div>
                 <ul class="nav_items">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#review">Reviews</a></li>
                     <li><a href="#showroom">Showroom</a></li>
                 </ul>
             </div>
@@ -38,8 +38,8 @@
                 </a>
             </div>
         </section>
-        <!-- Blog -->
-        <section class="blog" id="blog">
+        <!-- Reviews -->
+        <section id="review">
             <h2 class="title">Need some <span>inspiration?</span></h2>
             <h3 class="subtitle">Popular Reviews</h3>
             <div class="blog_container">
@@ -61,9 +61,8 @@
             </div>
         </section>
         <!-- Showroom -->
-        
-        <section class="showroom container" id="showroom">
-            <h2 class="title">Our <span>Showroom</span></h2>
+        <section id="showroom">
+            <h2 class="title">Showroom</h2>
             <div class="showroom_container">
                 <div class="showroom_item">
                     <img src="./img/BMW.jpg" alt="BMW">
