Did some finishing touches

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
         <section id="review">
             <h2 class="title">Need some <span>inspiration?</span></h2>
             <h3 class="subtitle">Popular Reviews</h3>
-            <div class="blog_container">
-                <div class="blog_item">
+            <div class="review_container">
+                <div class="review_item">
                     <img src="./img/BMW.jpg" alt="BMW">
                     <h3>BMW</h3>
                     <p class="score">9/10</p>
                 </div>
-                <div class="blog_item">
+                <div class="review_item">
                     <img src="./img/Mercedes.jpg" alt="Mercedes">
                     <h3>Mercedes-Benz</h3>
                     <p class="score">8/10</p>
                 </div>
-                <div class="blog_item">
+                <div class="review_item">
                     <img src="./img/Dodge.jpg" alt="Dodge">
                     <h3>Dodge</h3>
                     <p class="score">7.5/10</p>
@@ -64,22 +64,29 @@
         <section id="showroom">
             <h2 class="title">Showroom</h2>
             <div class="showroom_container">
-                <div class="showroom_item">
-                    <img src="./img/BMW.jpg" alt="BMW">
-                    <h3>BMW</h3>
-                    <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error sit, suscipit a voluptate perspiciatis temporibus.</p>
+                <div class="left">
+                    <div class="showroom_item" >
+                        <h2>Mclaren P1</h2>
+                        <img src="./img/Mclaren P1.jpg" alt="Mclaren P1">
+                        
+                    </div>
                 </div>
-                <div class="showroom_item">
-                    <img src="./img/Mercedes.jpg" alt="Mercedes">
-                    <h3>Mercedes-Benz</h3>
-                    <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum totam repellat modi quod sunt cupiditate!</p>
-                </div>
-                <div class="showroom_item">
-                    <img src="./img/Dodge.jpg" alt="Dodge">
-                    <h3>Dodge</h3>
-                    <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, obcaecati! Accusantium nisi corrupti fugit laborum.</p>
+                <div class="right">
+                    <h3>Condition: <span>Foreign Used</span></h3>
                 </div>
             </div>
+            
+            <div class="showroom_container">
+                <div class="left">
+                    <div class="showroom_item" >
+                        <h2>Jeep Wrangler Rubicon</h2>
+                        <img src="./img/Jeep Wrangler.jpg" alt="Jeep Wrangler Rubicon">
+                    </div>
+                </div>
+                <div class="right">
+                    <h3>Condition: <span>Kenyan Used</span></h3>
+                </div>
+            </div>               
         </section> 
     </main>
 </body>
