Made changes to the models section and renamed discover to specs

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <nav class="nav">
             <ul class="nav_links">
                 <li><a href="#models">Models</a></li>
-                <li><a href="#shop">Shop</a></li>
-                <li><a href="#discover">Discover</a></li>
+                <li><a href="#history">History</a></li>
+                <li><a href="#discover">Specs</a></li>
             </ul>
         </nav>
         <a href="#contact" class="contact_btn"><button type="button">Contact</button></a>
@@ -29,7 +29,7 @@
             <h3>Porsche</h3>
             <h1>There Is No <br>Substitute.</h1>
             <p>Hugs the road like a mom after graduation</p>
-            <a href="#discover" class="contact_btn"><button type="button">What's New</button></a>
+            <a href="#spec" class="contact_btn"><button type="button">What's New</button></a>
         </div>
     </div>
 
@@ -38,59 +38,84 @@
         <div class="section_title">
             <h2>Models</h2>
         </div>
-        <div class="models_content">
-            <div class="models_card">
-                <img src="./img/911.jpg" alt="911">
-                <h3>911</h3>
-                <p>From $100,000</p>
+        <div class="models_container">
+            <div class="model_cards">
+                <div class="models_card">
+                    <img src="./img/911.jpg" alt="911">
+                    <div class="model_content">
+                        <h3>911</h3>
+                        <p>From $100,000</p>
+                    </div>
+                </div>
             </div>
-            <div class="models_card">
-                <img src="./img/718.jpg" alt="718">
-                <h3>718</h3>
-                <p>From $65,400</p>
+            <div class="model_cards">
+                <div class="models_card">
+                    <img src="./img/718.jpg" alt="718">
+                    <div class="model_content">
+                        <h3>718</h3>
+                        <p>From $65,400</p>
+                    </div>
+                </div>
             </div>
-            <div class="models_card">
-                <img src="./img/Taycan.jpg" alt="Taycan">
-                <h3>Taycan</h3>
-                <p>From $91,400</p>
+            <div class="model_cards">
+                <div class="models_card">
+                    <img src="./img/Taycan.jpg" alt="Taycan">
+                    <div class="model_content">
+                        <h3>Taycan</h3>
+                        <p>From $91,400</p>
+                    </div>
+                </div>
             </div>
-            <div class="models_card">
-                <img src="./img/Macan.jpg" alt="Macan">
-                <h3>Macan</h3>
-                <p>From $59,300</p>
+            <div class="model_cards">
+                <div class="models_card">
+                    <img src="./img/Macan.jpg" alt="Macan">
+                    <div class="model_content">
+                        <h3>Macan</h3>
+                        <p>From $59,300</p>
+                    </div>
+                </div>
             </div>
-            <div class="models_card">
-                <img src="./img/Cayenne.jpg" alt="Cayenne">
-                <h3>Cayenne</h3>
-                <p>From $78,400</p>
+            <div class="model_cards">
+                <div class="models_card">
+                    <img src="./img/Cayenne.jpg" alt="Cayenne">
+                    <div class="model_content">
+                        <h3>Cayenne</h3>
+                        <p>From $78,400</p>
+                    </div>
+                </div>
             </div>
-            <div class="models_card">
-                <img src="./img/Panamera.jpg" alt="Panamera">
-                <h3>Panamera</h3>
-                <p>From at $98,600</p>
+            <div class="model_cards">
+                <div class="models_card">
+                    <img src="./img/Panamera.jpg" alt="Panamera">
+                    <div class="model_content">
+                        <h3>Panamera</h3>
+                        <p>From at $98,600</p>
+                    </div>
+                </div>
             </div>
+        </div>
     </section>
     
-    <!-- Shop -->
-    <section id="shop">
+    <!-- History -->
+    <section id="history">
         <div class="section_title">
-            <h2>Shop For Parts</h2>
+            <h2>Porsche History</h2>
         </div>
     </section>
 
-    <!-- Discover -->
-    <section id="discover">
+    <!-- Specs -->
+    <section id="specs">
         <div class="section_title">
-            <h2>Discover</h2>
+            <h2>Specs</h2>
         </div>
-        <div class="discover_cards">
-            <div class="discover_card">
+        <div class="spec_cards">
+            <div class="spec_card">
                 <img src="./img/engine.png" alt="Engine">
             </div>
-            <div class="discover_card">
+            <div class="spec_card">
                 <img src="./img/transmission.png" alt="Transmission">
             </div>
-            <div class="discover_card">
+            <div class="spec_card">
                 <img src="./img/brake.png" alt="Brake">
             </div>
         </div>
@@ -105,7 +130,7 @@
     <footer class="footer">
         <div class="footer_container">
             <div class="footer_logo">
-                <img src="./img/footer.png" alt="Porsche Logo">
+                <img src="./img/logo.png" alt="Porsche Logo">
             </div>
             <div class="footer_social">
                 <a href="https://web.facebook.com/porsche/" target="_blank" rel="noopener" title="Visit Porsche Facebook Page">
