Modified the history and specs section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h3>Porsche</h3>
             <h1>There Is No <br>Substitute.</h1>
             <p>Hugs the road like a mom after graduation</p>
-            <a href="#spec" class="contact_btn"><button type="button">What's New</button></a>
+            <a href="#specs" class="contact_btn"><button type="button">What's New</button></a>
         </div>
     </div>
 
@@ -99,7 +99,19 @@
     <!-- History -->
     <section id="history">
         <div class="section_title">
-            <h2>Porsche History</h2>
+            <h2>History</h2>
+        </div>
+        <div class="history_container">
+            <div class="history_img">
+                <img~ src="./img/history.png" alt="History">
+            </div>
+            <div class="history_content">
+                <img src="./img/historyLogo.png" alt="Porsche Logo">
+                <p>Dr. Ing. h.c. F. Porsche AG, usually shortened to Porsche AG, is a German automobile manufacturer specializing in high-performance sports cars, SUVs and sedans. The headquarters of Porsche AG is in Stuttgart, and is owned by Volkswagen AG, a controlling stake of which is owned by Porsche Automobil Holding SE. Porsche's current lineup includes the 718 Boxster/Cayman, 911, Panamera, Macan, Cayenne and Taycan.</p>
+                <a href="https://en.wikipedia.org/wiki/Porsche" target="_blank" rel="noopener" title="Visit Porsche Wikipedia Page">
+                    <button type="button">Read More</button>
+                </a>
+            </div>
         </div>
     </section>
 
@@ -108,15 +120,36 @@
         <div class="section_title">
             <h2>Specs</h2>
         </div>
-        <div class="spec_cards">
-            <div class="spec_card">
-                <img src="./img/engine.png" alt="Engine">
+        <div class="spec_container">
+            <div class="spec_cards">
+                <div class="spec_card">
+                    <img src="./img/engine.png" alt="Engine">
+                    <div class="spec_content">
+                        <h3>Engine</h3>
+                        <p>Engine type: 3.0-liter twin-turbocharged V6</p>
+                        <p>Power: 335 hp @ 5,400 rpm</p>
+                        <p>Torque: 332 lb-ft @ 1,340 rpm</p>
+                    </div>
+                </div>
             </div>
-            <div class="spec_card">
-                <img src="./img/transmission.png" alt="Transmission">
+            <div class="spec_cards">
+                <div class="spec_card">
+                    <img src="./img/transmission.png" alt="Transmission">
+                    <div class="spec_content">
+                        <h3>Transmission</h3>
+                        <p>8-speed Porsche Doppelkupplung (PDK)</p>
+                    </div>
+                </div>
             </div>
-            <div class="spec_card">
-                <img src="./img/brake.png" alt="Brake">
+            <div class="spec_cards">
+                <div class="spec_card">
+                    <img src="./img/brake.png" alt="Brake">
+                    <div class="spec_content">
+                        <h3>Brake</h3>
+                        <p>Front: 6-piston aluminum monobloc fixed calipers with 350 mm internally vented brake discs</p>
+                        <p>Rear: 4-piston aluminum monobloc fixed calipers with 350 mm internally vented brake discs</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
