History section bug fix

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <div class="history_container">
             <div class="history_img">
-                <img~ src="./img/history.png" alt="History">
+                <img src="./img/history.png" alt="History">
             </div>
             <div class="history_content">
                 <img src="./img/historyLogo.png" alt="Porsche Logo">
