--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="nav_links">
                 <li><a href="#models">Models</a></li>
                 <li><a href="#history">History</a></li>
-                <li><a href="#discover">Specs</a></li>
+                <li><a href="#specs">Specs</a></li>
             </ul>
         </nav>
         <a href="#contact" class="contact_btn"><button type="button">Contact</button></a>
